--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,24 @@
+.Nav {
+ 
 .container{
-    border:2px solid black;
-    
+    /* border:2px solid black; */
+    border-top: 1px solid rgba(175, 201, 219, 0.4) ;
+    position: fixed;
+    width: 100%;
+    margin-top: 5px;
+    background-color:rgba(195, 222, 240, 0.4) 
+
 }
+
+
 
 .nav-list{
     display: flex;
     list-style: none;
     justify-content: space-between;
-}
+    align-items: center;
+    height: 1.8rem;
+    }
 
 .link-container{
     display: flex;
@@ -15,7 +26,7 @@
     align-items: center;
     /* margin-left: 5rem; */
     /* border:2px solid black; */
-    width: 45%;
+    width: 650px;
     padding-right: 6rem;
 }
 .link{
@@ -28,15 +39,24 @@
 
 .right{
     /* border: 2px solid black; */
-    width: 20%;
+    width: 220px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 2rem;
+    /* padding-right: 0.5rem; */
+    
 }
 
 .right-logo{
-    height: 8vh;
+    height: 60px;
+    
+}
+.logo{
+    display: flex;
+    justify-content: space-between;
+    width: 130px;
+    margin-left: -2rem;
+    margin-right:1rem ;
 }
 
 .contact{
@@ -45,5 +65,8 @@
     padding: 0.5rem;
     color: white;
     border-radius: 0.6rem;
+    width: 110px;
+    font-size: 13.8px;
+    
 }
-
+}
