--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,7 @@
 .Nav {
  
+/* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+
 .container{
     /* border:2px solid black; */
     border-top: 1px solid rgba(175, 201, 219, 0.4) ;
