--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -76,4 +76,63 @@
     font-size: 13.8px;
     
 }
+
+.menu{
+    border: 2px solid blue;
+    color: blue;
+    padding: 0.6rem;
+    border-radius: 0.8rem;
+    display: none;
+    cursor: pointer;
 }
+
+.dropdown{
+    border-bottom: 2px solid rgb(154, 191, 216);
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    margin-top: 4rem;
+    z-index: 100;
+    background-color:rgba(195, 222, 240, 0.9)
+    
+}
+
+.dropdown ul{
+    list-style-type: none;
+    width: 100%;
+    margin-left:-40px;
+    
+}
+
+.dropdown ul li{
+    padding: 8px;
+    width: 100%;
+    font-weight: bolder;
+    text-align: center;
+    cursor: pointer;
+   
+}
+
+.dropdown ul li:not(:last-child){
+    border-bottom: 2px solid rgba(154, 191, 216,0.7);
+}
+
+@media screen and (max-width:950px){
+    .link,.right{
+        display: none;
+    }
+    .menu{
+        display: block;
+    }
+}
+
+@media screen and (min-width:950px){
+    .dropdown{
+        display: none!important;
+    }
+}
+
+}
+
+    
